# straight-equation

./: .gitignore  .project  Cargo.toml  angularReduced.py  constantGeneral.py  main(portuguese).py  mainGerman.py  mainPortuguese.py  pyproject.toml  readme.md
executable/: main.spec
src/: angular_coeficient_reduced.rs  english.py  general.py  general_equation.rs  german.py  italian.py  linear_coeficient_reduced.rs  main.py  main.rs  portuguese.py  reduced.py  reduced_equation.rs  spanish.py  straight.rs
src/general/: angular.py  constant.py  linear.py
src/languages/: english.py  german.py  italian.py  portuguese.py  spanish.py
src/reduced/: angular.py  linear.py
