[tool.poetry]
name = "StraightEquation"
version = "0.1.0"
description = "Straight equation calculator general and reduced."
authors = ["Marcos Felipe Barbosa de Carvalho"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
